--- a/Javascript/DOM/Concept/index.html
+++ b/Javascript/DOM/Concept/index.html
@@ -18,10 +18,10 @@
       "
     >
       <div>
-        class="main lola" >
         <h1 id="heading">DOM Manipulation</h1>
         <div class="list-container">
           <ul id="list-items">
+            <h4>List ITEMS</h4>
             <li class="list">List One</li>
             <li class="list">List Two</li>
             <li class="list">List Three</li>
